# parallel-jacobi-method

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
include/: Common.hpp  Solver.hpp  Timer.hpp
scripts/: PlotGen.ipynb
src/: FastFlowSolver.cpp  NativeThreadSolver.cpp  SequentialSolver.cpp  main.cpp
src/solvers/: FastFlowSolver.cpp  NativeThreadSolver.cpp  SequentialSolver.cpp
